<resources>
    <string-array name="makes_array">
        <item value="Acura">Acura</item>
        <item value="Alfa Romeo">Alfa Romeo</item>
        <item value="Aston Martin">Aston Martin</item>
        <item value="Audi">Audi</item>
        <item value="Bentley">Bentley</item>
        <item value="BMW">BMW</item>
        <item value="Bugatti">Bugatti</item>
        <item value="Buick">Buick</item>
        <item value="BYD">BYD</item>
        <item value="Cadillac">Cadillac</item>
        <item value="Chevrolet">Chevrolet</item>
        <item value="Chrysler">Chrysler</item>
        <item value="Dodge">Dodge</item>
        <item value="Ferrari">Ferrari</item>
        <item value="Fiat">Fiat</item>
        <item value="Ford">Ford</item>
        <item value="Genesis">Genesis</item>
        <item value="GMC">GMC</item>
        <item value="Honda">Honda</item>
        <item value="Hyundai">Hyundai</item>
        <item value="Infiniti">Infiniti</item>
        <item value="Jaguar">Jaguar</item>
        <item value="Jeep">Jeep</item>
        <item value="Karma">Karma</item>
        <item value="Kia">Kia</item>
        <item value="Lamborghini">Lamborghini</item>
        <item value="Land Rover">Land Rover</item>
        <item value="Lexus">Lexus</item>
        <item value="Lincoln">Lincoln</item>
        <item value="Lotus">Lotus</item>
        <item value="Maserati">Maserati</item>
        <item value="Mazda">Mazda</item>
        <item value="Mercedes-Benz">Mercedes-Benz</item>
        <item value="MINI">MINI</item>
        <item value="Mitsubishi">Mitsubishi</item>
        <item value="Nissan">Nissan</item>
        <item value="Porsche">Porsche</item>
        <item value="Ram">Ram</item>
        <item value="Rolls-Royce">Rolls-Royce</item>
        <item value="Roush Performance">Roush Performance</item>
        <item value="Subaru">Subaru</item>
        <item value="Tesla">Tesla</item>
        <item value="Toyota">Toyota</item>
        <item value="Volkswagen">Volkswagen</item>
        <item value="Volvo">Volvo</item>
    </string-array>
    <string-array name="honda_models_array">
    <item value="Accord">Accord</item>
    <item value="Civic">Civic</item>
    <item value="Clarity">Clarity</item>
    <item value="CR-V">CR-V</item>
    <item value="Fit">Fit</item>
    <item value="HR-V">HR-V</item>
    <item value="Insight">Insight</item>
    <item value="Odyssey">Odyssey</item>
    <item value="Passport">Passport</item>
    <item value="Pilot">Pilot</item>
    <item value="Ridgeline">Ridgeline</item>
</string-array>
    <string-array name="years_array">
        <item value="2021">2021</item>
        <item value="2020">2020</item>
        <item value="2019">2019</item>
        <item value="2018">2018</item>
        <item value="2017">2017</item>
        <item value="2016">2016</item>
        <item value="2015">2015</item>
        <item value="2014">2014</item>
        <item value="2013">2013</item>
        <item value="2012">2012</item>
        <item value="2011">2011</item>
        <item value="2010">2010</item>
        <item value="2009">2009</item>
        <item value="2008">2008</item>
        <item value="2007">2007</item>
        <item value="2006">2006</item>
        <item value="2005">2005</item>
    </string-array>
    <string-array name="toyota_models_array">
        <item value="4Runner">4Runner</item>
        <item value="86">86</item>
        <item value="Avalon">Avalon</item>
        <item value="C-HR">C-HR</item>
        <item value="Camry">Camry</item>
        <item value="Corolla">Corolla</item>
        <item value="GR Supra">GR Supra</item>
        <item value="Highlander">Highlander</item>
        <item value="Land Cruiser">Land Cruiser</item>
        <item value="Prius">Prius</item>
        <item value="Prius Prime">Prius Prime</item>
        <item value="RAV4">RAV4</item>
        <item value="Sequoia">Sequoia</item>
        <item value="Sienna">Sienna</item>
        <item value="Tacoma">Tacoma</item>
        <item value="Tundra">Tundra</item>
        <item value="Yaris">Yaris</item>
    </string-array>
    <string name="daily">Diario</string>
    <string name="weekly">Semanal</string>
    <string name="monthly">Mensual</string>
    <string name="quarterly">Trimestral</string>
    <string name="biannual">Semestral</string>
    <string name="annual">Anual</string>
    <string name="font_gothamRounded_bold">fonts/GothamRounded/Bold.otf</string>
    <string name="font_gothamRounded_book">fonts/GothamRounded/Book.otf</string>
    <string name="font_gothamRounded_bookItalic">fonts/GothamRounded/BookItalic.otf</string>
    <string name="font_gothamRounded_light">fonts/GothamRounded/Light.otf</string>
    <string name="font_gothamRounded_medium">fonts/GothamRounded/Medium.otf</string>
    <string name="font_roboto_medium">fonts/Roboto/Medium.ttf</string>
    <string name="font_roboto_regular">fonts/Roboto/Regular.ttf</string>
    <string name="input_background_path_data">M0,44 H240</string>
    <string name="accounts">Cuentas</string>
    <string name="advance">Avanzar</string>
    <string name="code">Código</string>
    <string name="coverage">Cobertura</string>
    <string name="credit">Crédito</string>
    <string name="current">Corriente</string>
    <string name="debit">Débito</string>
    <string name="disburse">Desembolsar</string>
    <string name="edit">Editar</string>
    <string name="email">Correo electrónico</string>
    <string name="enableAsVerb">Habilitar</string>
    <string name="fingerprint">Huella digital</string>
    <string name="firstName">Nombre</string>
    <string name="forward">Avanzar</string>
    <string name="from">Desde</string>
    <string name="lastName">Apellido</string>
    <string name="laterAsVerb">Mas tarde</string>
    <string name="loan">Préstamo</string>
    <string name="next">Continuar</string>
    <string name="none">Ninguno</string>
    <string name="ok">Ok</string>
    <string name="others">Otros</string>
    <string name="phoneNumber">Número de teléfono</string>
    <string name="premium">Prima</string>
    <string name="prepaid">Prepago</string>
    <string name="profile">Perfil</string>
    <string name="savings">Ahorro</string>
    <string name="security">Seguridad</string>
    <string name="set">Establecer</string>
    <string name="settings">Ajustes</string>
    <string name="submit">Aplicar</string>
    <string name="to">A</string>
    <string name="update">Actualizar</string>
    <string name="withdraw">Retirar</string>
    <string name="rate">Tasa</string>
    <string name="payType">Tipo de pago</string>
    <string name="totalPayment">Total a pagar</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="format_productNumber_masked">%1$s</string>
    <string name="format_productNumber_masked_creditCard">%1$s</string>
    <string name="format_to">A %1$s</string>
    <string name="pictureCreatorTitleFormat">%1$s foto de perfil</string>
    <string name="altUnlockMethod">Desbloquear rápido</string>
    <string name="altUnlockMethodCodeMismatch">Los códigos ingresados para el desbloqueo rápido no coinciden. Favor intentar nuevamente.</string>
    <string name="altUnlockMethodEnableQuestion">¿Desea habilitar algún método de desbloqueo rápido?</string>
    <string name="anUnexpectedErrorOccurred">En estos momentos no podemos procesar esta solicitud. Favor intentar nuevamente.</string>
    <string name="available_balance">Balance Disponible</string>
    <string name="changeMyPassword">Cambiar mi contraseña</string>
    <string name="chooseAnAlternativeAuthenticationMethod">Para tu seguridad requerimos bloquear el App. Selecciona entre estas opciones para iniciar de manera rápida.</string>
    <string name="confirmCodeForAltAuth">Confirma código para desbloqueo rápido</string>
    <string name="extraCredit">Extracrédito</string>
    <string name="forgotMyCode">Olvidé mi código</string>
    <string name="forgotMyPassword">Olvidé mi contraseña</string>
    <string name="inputCodeForAltAuth">Ingresa código para desbloqueo rápido</string>
    <string name="lockOnExitSettingsOption">Bloquear al salir</string>
    <string name="myProfile">Mi perfil</string>
    <string name="noneUsePassword">Ninguno, utilizar contraseña</string>
    <string name="pinSettingsOption">Cambiar PIN tPago</string>
    <string name="resetByPin">Restablecer con PIN</string>
    <string name="resetByEmail">Restablecer con correo-e</string>
    <string name="primaryPaymentMethodSettingsOption">Cuenta de fondos primaria</string>
    <string name="profileSettingsOption">Editar mi perfil</string>
    <string name="salaryAdvance">Avance de Sueldo</string>
    <string name="signOut">Desvincular dispositivo</string>
    <string name="thereIsNoAccountsAvailableForCashAdvance">No tiene cuentas bancarias afiliadas para acreditar su avance de efectivo desde su tarjeta. Favor enrole sus cuentas e intente de nuevo.</string>
    <string name="thereIsNoDisbursableItemsAvailable">No tiene tarjetas de crédito afiliadas para realizar esta transacción. Favor enrole sus tarjetas e intente de nuevo.</string>
    <string name="timeoutSettingsOption">Bloquear automáticamente</string>
    <string name="transactionSucceeded">¡Transacción exitosa!</string>
    <string name="unlockWithFingerprint">Desbloquea con huella digital</string>
    <string name="usePassword">Usar contraseña</string>
    <string name="weAreSorry">¡Lo sentimos!</string>
    <string name="welcomeUser">¡Bienvenido, %1$s!</string>
    <string name="main_transaction_insurance_micro">Microseguros</string>
    <string name="main_transaction_insurance_micro_confirm_message">Comprar póliza %1$s con prima de %2$s.</string>
    <string name="main_transaction_recharge_summary">Recargar %1$s a %2$s.</string>
    <string name="main_transaction_pay_summary">Pagar %1$s a %2$s.</string>
    <string name="main_transaction_pay_pal_summary">Recargar %1$s a %2$s más cargo de %3$s.</string>
    <string name="main_transaction_pay_pal_rate">Tasa de cambio: %1$s</string>
    <string name="main_transaction_pay_pal_total">Monto total: %1$s</string>
    <string name="about">Acerca de</string>
    <string name="add_another_account">Agregar otra cuenta</string>
    <string name="help">Ayuda</string>
    <string name="instruction_content_first">¡Listo! Visita la sucursal del banco donde tienes la cuenta o tarjeta de crédito que deseas agregar.</string>
    <string name="instruction_content_second">Con tu cédula y celular en mano, solicita a un representante de servicio, que active tu cuenta o tarjeta a tPago.</string>
    <string name="instruction_content_third">¡Listo! Ya podrás pagar fácil y rápido usando tPago.</string>
    <string name="instruction_index_first">1.</string>
    <string name="instruction_index_second">2.</string>
    <string name="instruction_index_third">3.</string>
    <string name="logo">Logo</string>
    <string name="my_profile">Mi perfil</string>
    <string name="preferences">Preferencias</string>
    <string name="register_form_email_input_hint">@string/email</string>
    <string name="register_form_email_input_hint_confirmation">Confirmar correo electrónico</string>
    <string name="register_form_email_label_description">Seguimos con tu correo electrónico</string>
    <string name="register_form_email_label_title">Un poco de ti</string>
    <string name="register_form_name_button_move_to_next_screen">@string/next</string>
    <string name="see_bank_branches">Ver sucursales bancarias</string>
    <string name="sign_in_button">@string/sign_in</string>
    <string name="sign_in_input_hint_email">@string/email</string>
    <string name="sign_in_input_hint_password">@string/password</string>
    <string name="sign_in_label_description">Iniciar sesión con usuario y contraseña de CryptoQR</string>
    <string name="sign_in_label_title">@string/welcome</string>
</resources>