<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/SettingsContainer">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      style="@style/SettingsSectionTitle"
      android:text="@string/profile"/>

    <com.tpago.movil.app.ui.main.settings.MultiLineSettingsOption
      android:id="@+id/profileSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/profileSettingsOption"/>

    <androidx.legacy.widget.Space style="@style/VerticalDivider.Space.Normal"/>

    <TextView
      style="@style/SettingsSectionTitle"
      android:text="@string/accounts"/>

    <com.tpago.movil.app.ui.main.settings.MultiLineSettingsOption
      android:id="@+id/primaryPaymentMethodSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/primaryPaymentMethodSettingsOption"/>

    <androidx.legacy.widget.Space style="@style/VerticalDivider.Space.Normal"/>

    <TextView
      style="@style/SettingsSectionTitle"
      android:text="@string/security"/>

    <com.tpago.movil.app.ui.main.settings.MultiLineSettingsOption
      android:id="@+id/altAuthMethodSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/altUnlockMethod"/>

    <View
      style="@style/VerticalDivider.Line"
      android:layout_marginEnd="@dimen/space_horizontal_20"
      android:layout_marginStart="@dimen/space_horizontal_20"/>

    <com.tpago.movil.app.ui.main.settings.MultiLineSettingsOption
      android:id="@+id/timeoutSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/timeoutSettingsOption"/>

    <View
      style="@style/VerticalDivider.Line"
      android:layout_marginEnd="@dimen/space_horizontal_20"
      android:layout_marginStart="@dimen/space_horizontal_20"
      android:visibility="gone"/>

    <com.tpago.movil.app.ui.main.settings.ToggleableSettingsOption
      android:id="@+id/lockOnExitSettingsOption"
      style="@style/SettingsOption"
      android:visibility="gone"
      app:primaryText="@string/lockOnExitSettingsOption"/>

    <View
      style="@style/VerticalDivider.Line"
      android:layout_marginEnd="@dimen/space_horizontal_20"
      android:layout_marginStart="@dimen/space_horizontal_20"/>

    <com.tpago.movil.app.ui.main.settings.SingleLineSettingsOption
      android:id="@+id/pinSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/pinSettingsOption"/>

    <androidx.legacy.widget.Space style="@style/VerticalDivider.Space.Normal"/>

    <TextView
      style="@style/SettingsSectionTitle"
      android:text="@string/others"/>

    <com.tpago.movil.app.ui.main.settings.SingleLineSettingsOption
      android:id="@+id/setting_option_help"
      style="@style/SettingsOption"
      app:primaryText="@string/help"/>

    <View
      style="@style/VerticalDivider.Line"
      android:layout_marginEnd="@dimen/space_horizontal_20"
      android:layout_marginStart="@dimen/space_horizontal_20"/>

    <com.tpago.movil.app.ui.main.settings.SingleLineSettingsOption
      android:id="@+id/setting_option_about"
      style="@style/SettingsOption"
      app:primaryText="@string/about"/>

  </LinearLayout>
</ScrollView>
