<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/init_container_padding_top_normal"
  tools:ignore="MissingPrefix">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/label_title"
      style="@style/D.Label.Dark.Primary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_label_title" />

    <TextView
      android:id="@+id/label_description"
      style="@style/D.Label.Dark.Secondary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="10dp"
      android:text="@string/sign_in_label_description" />

    <com.tpago.movil.dep.widget.TextInput
      android:id="@+id/text_input_email"
      style="@style/D.Widget.TextInput.Dark"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="32dp"
      android:hint="@string/sign_in_input_hint_email"
      android:inputType="text|textEmailAddress"
      android:maxLines="1"
      android:nextFocusDown="@+id/text_input_password" />

    <com.tpago.movil.dep.widget.TextInput
      android:id="@+id/text_input_password"
      style="@style/D.Widget.TextInput.Dark"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="8dp"
      android:hint="@string/sign_in_input_hint_password"
      android:imeOptions="actionDone"
      android:inputType="text|textPassword"
      android:maxLines="1" />

    <TextView
      android:id="@+id/userForgotPassword"
      fontPath="@string/font_gothamRounded_bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="60dp"
      android:layout_marginLeft="60dp"
      android:layout_marginRight="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginTop="15dp"
      android:clickable="true"
      android:gravity="center"
      android:text="@string/forgotMyPassword"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="10sp" />
  </LinearLayout>

  <Button
    android:id="@+id/button_sign_in"
    style="@style/Button.Dark.Primary"
    android:layout_alignParentBottom="true"
    android:text="@string/sign_in_button" />
</RelativeLayout>