<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background_menu"
  android:orientation="vertical">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:contentDescription="@string/logo"
      android:src="@drawable/logo_menu"/>
  </FrameLayout>

  <TextView
    android:id="@+id/text_view_payments"
    style="@style/MenuItem.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="17dp"
    android:drawableStart="@drawable/ic_payments"
    android:text="@string/payments"/>

  <TextView
    android:id="@+id/text_view_commerce"
    style="@style/MenuItem.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_commerce"
    android:gravity="center_vertical"
    android:text="@string/commerce"/>

  <TextView
    android:id="@+id/text_view_accounts"
    style="@style/MenuItem.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_accounts"
    android:text="@string/accounts"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/text_view_add_another_account"
      style="@style/MenuItem.Small"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="17dp"
      android:text="@string/add_another_account"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/text_view_add_another_account"
      android:layout_alignParentTop="true"
      android:gravity="center"
      android:orientation="vertical">

      <TextView
        android:id="@+id/text_view_profile"
        style="@style/MenuItem.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"/>

      <TextView
        android:id="@+id/text_view_preferences"
        style="@style/MenuItem.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences"/>

      <TextView
        android:id="@+id/text_view_about"
        style="@style/MenuItem.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"/>

      <TextView
        android:id="@+id/text_view_help"
        style="@style/MenuItem.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"/>
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>
