<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/SettingsContainer">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Picture -->
    <ImageView
      android:id="@+id/pictureImageView"
      android:layout_gravity="center_horizontal"
      style="@style/ProfilePicturePlaceholder.Light.Large"/>

    <Space style="@style/Divider.Space.Normal"/>

    <!-- Fist name -->
    <TextView
      style="@style/ProfileLabel"
      android:text="@string/firstName"/>

    <com.tpago.movil.widget.TextInput
      android:id="@+id/firstNameTextInput"
      style="@style/ProfileInput"
      android:enabled="false"/>

    <View style="@style/Divider.Line"/>

    <android.support.v4.widget.Space style="@style/Divider.Space.Small"/>

    <!-- Last name -->
    <TextView
      style="@style/ProfileLabel"
      android:text="@string/lastName"/>

    <com.tpago.movil.widget.TextInput
      android:id="@+id/lastNameTextInput"
      style="@style/ProfileInput"
      android:enabled="false"/>

    <View style="@style/Divider.Line"/>

    <android.support.v4.widget.Space style="@style/Divider.Space.Small"/>

    <!-- Phone number -->
    <TextView
      style="@style/ProfileLabel"
      android:text="@string/phoneNumber"/>

    <com.tpago.movil.widget.TextInput
      android:id="@+id/phoneNumberTextInput"
      style="@style/ProfileInput"
      android:drawableEnd="@drawable/profile_input_indicator_uneditable"
      android:enabled="false"/>

    <View style="@style/Divider.Line"/>

    <android.support.v4.widget.Space style="@style/Divider.Space.Small"/>

    <!-- Email -->
    <TextView
      style="@style/ProfileLabel"
      android:text="@string/email"/>

    <com.tpago.movil.widget.TextInput
      android:id="@+id/emailTextInput"
      style="@style/ProfileInput"
      android:drawableEnd="@drawable/profile_input_indicator_uneditable"
      android:enabled="false"/>

    <View style="@style/Divider.Line"/>

    <!-- Change password -->
    <com.tpago.movil.app.ui.main.settings.SingleLineSettingsOption
      android:id="@+id/changeMyPasswordSettingsOption"
      style="@style/SettingsOption"
      android:visibility="gone"
      app:primaryText="@string/changeMyPassword"/>

    <View
      style="@style/Divider.Line"
      android:visibility="gone"/>

    <!-- Sign out -->
    <com.tpago.movil.app.ui.main.settings.SingleLineSettingsOption
      android:id="@+id/signOutSettingsOption"
      style="@style/SettingsOption"
      app:primaryText="@string/signOut"
      app:primaryTextColor="@color/dangerousSettingsText"/>
  </LinearLayout>
</ScrollView>