<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/common_white"
      android:orientation="vertical">
      <RelativeLayout
        style="@style/ListItemInstruction"
        android:layout_width="match_parent">
        <TextView
          android:id="@+id/list_item_instruction_index_first"
          style="@style/ListItemInstructionIndex"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:text="@string/instruction_index_first"/>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="44dp"
          android:orientation="vertical">
          <TextView
            style="@style/ListItemInstructionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/instruction_content_first"/>
          <TextView
            style="@style/Dep.App.Text.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_bank_branches"/>
        </LinearLayout>
      </RelativeLayout>
      <include layout="@layout/d_list_item_divider"/>
      <RelativeLayout
        style="@style/ListItemInstruction"
        android:layout_width="match_parent">
        <TextView
          style="@style/ListItemInstructionIndex"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:text="@string/instruction_index_second"/>
        <TextView
          android:id="@+id/textView"
          style="@style/ListItemInstructionContent"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="44dp"
          android:gravity="center_vertical"
          android:text="@string/instruction_content_second"/>
      </RelativeLayout>
      <include layout="@layout/d_list_item_divider"/>
      <RelativeLayout
        style="@style/ListItemInstruction"
        android:layout_width="match_parent">
        <TextView
          style="@style/ListItemInstructionIndex"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:text="@string/instruction_index_third"/>
        <TextView
          style="@style/ListItemInstructionContent"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginStart="44dp"
          android:gravity="center_vertical"
          android:text="@string/instruction_content_third"/>
      </RelativeLayout>
    </LinearLayout>
  </ScrollView>
</FrameLayout>
