<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/init_container_padding_top_normal">
  <TextView
    android:id="@+id/label_title"
    style="@style/D.Label.Dark.Primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register_form_email_label_title"/>
  <TextView
    android:id="@+id/label_description"
    style="@style/D.Label.Dark.Secondary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/label_title"
    android:layout_marginEnd="60dp"
    android:layout_marginStart="60dp"
    android:layout_marginTop="10dp"
    android:text="@string/register_form_email_label_description"/>
  <com.tpago.movil.dep.widget.TextInput
    android:id="@+id/text_input"
    style="@style/D.Widget.TextInput.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label_description"
    android:layout_marginEnd="60dp"
    android:layout_marginStart="60dp"
    android:layout_marginTop="32dp"
    android:hint="@string/register_form_email_input_hint"
    android:inputType="text|textEmailAddress"
    android:maxLines="1"
    android:nextFocusDown="@+id/text_input_last_name"/>
  <com.tpago.movil.dep.widget.TextInput
    android:id="@+id/text_input_confirmation"
    style="@style/D.Widget.TextInput.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/text_input"
    android:layout_marginEnd="60dp"
    android:layout_marginStart="60dp"
    android:layout_marginTop="8dp"
    android:hint="@string/register_form_email_input_hint_confirmation"
    android:imeOptions="actionDone"
    android:inputType="text|textEmailAddress"
    android:maxLines="1"/>
  <Button
    android:id="@+id/button_move_to_next_screen"
    style="@style/D.Widget.Button.Dark.Gradient"
    android:layout_alignParentBottom="true"
    android:text="@string/register_form_name_button_move_to_next_screen"/>
</RelativeLayout>